--- a/Tensorflow.keras_Learn(2).ipynb
+++ b/Tensorflow.keras_Learn(2).ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c440bf38-7189-4420-82da-acf1d1c740c9",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "42785281-71eb-4413-be5a-a7f85b28e0ee",
    "metadata": {},
    "outputs": [],
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "f7ee1ec8-ee47-47a5-a995-e147d7011ce7",
    "metadata": {},
    "outputs": [],
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "8c54950c-7651-4d60-848e-077d10b530e2",
    "metadata": {},
    "outputs": [],
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "938277b2-29ca-4676-bca5-1ca7ba163b18",
    "metadata": {},
    "outputs": [],
@@ -444,7 +444,7 @@
     "        # Now the model has beem built, we need define algorithms' hyperparameters\n",
     "        optimizer_name = hp.Choice(\"optimizer\", [\"adam\", \"sgd\"])\n",
     "        if optimizer_name==\"adam\":\n",
-    "            learning_rate = hp.Chocie(\"learning_rate_adam\", [1e-3, 5e-4, 1e-4])\n",
+    "            learning_rate = hp.Choice(\"learning_rate_adam\", [1e-3, 5e-4, 1e-4])\n",
     "            optimizer = keras.optimizers.Adam(learning_rate=learning_rate)\n",
     "\n",
     "        else:\n",
@@ -504,7 +504,7 @@
    "id": "a893098d-cbfa-42c7-b84d-b7c63a458bd2",
    "metadata": {},
    "source": [
-    "Now we use the Hyperband in this notebook"
+    "Now we use the `Hyperband` in this notebook"
    ]
   },
   {
@@ -512,12 +512,28 @@
    "id": "49bdad34-e079-41c3-ad13-0183c8d6ac87",
    "metadata": {},
    "source": [
-    "**To instantiation the Hyperband tuner, must specify the hyper model, the objective(metrics) we want to optimize, and the maximum epoches of the tuner**"
+    "**To instantiation the Hyperband tuner, must specify the `hyper model`, the `objective(metrics)` we want to optimize, and the `maximum epoches` of the tuner**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b91b275-ebf7-491f-997e-56fc7f847960",
+   "metadata": {},
+   "source": [
+    "The parameters mean:\n",
+    "\n",
+    "1. hypermodel: Receive the model we want to optimize, includes `model_builder()` function and `HyperModel()` class objects.\n",
+    "\n",
+    "2. objective: The metrics we want to optimize, \"val_accuracy\" is for accuracy of the validation dataset.\n",
+    "\n",
+    "3. max_epochs: The number of epochs if objective haven't improve\n",
+    "\n",
+    "4. factor: Specify how much percentage we want to store, factor=3, so we divided data into 3 parts, only store 1 part of them"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "cfc73a15-9630-42bf-aa3b-6b3312007283",
    "metadata": {},
    "outputs": [],
@@ -533,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a437d322-7ea6-4f57-a886-2ac90f16770a",
    "metadata": {},
    "outputs": [],
@@ -556,9 +572,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9b6c5dcc-25e7-4b18-a8cc-49bc14a4070d",
+   "metadata": {},
+   "source": [
+    "Now we don't want the procedure continues such long, so we add `Early stopping`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96b59076-6d8a-47a1-8c1c-0e5488fe1d9a",
+   "id": "c003ec0d-b45e-49c8-b4d3-a4da4813dc57",
    "metadata": {},
    "outputs": [],
    "source": []
