Update basic knowledage

--- a/Tensor Flow Basic Knowledage.ipynb
+++ b/Tensor Flow Basic Knowledage.ipynb
@@ -1114,7 +1114,7 @@
    "id": "4692d92b-f3b4-4660-9008-75baf88834d9",
    "metadata": {},
    "source": [
-    "Please noticed the `compile()` can specify the metrics if you want additional evaluate metrics. All the metics stored in the package `tensorflow.keras.metrics`, here we use Accurancy."
+    "Please noticed the `compile()` can specify the metrics if you want additional evaluate metrics. All the metics stored in the package `tensorflow.keras.metrics`, here we use Accurancy. The metrics we used will be metrics class, if we use method, we meed to add parameters."
    ]
   },
   {
@@ -1122,7 +1122,7 @@
    "id": "551c21d4-da44-448f-b260-53aec1441500",
    "metadata": {},
    "source": [
-    "Please note that the compile need specify the metrics we want to use to evaluate the performance during traing, aslo this poarameter will be feed to `evaluate()` as the metrics we focusing in model testing, and the **`evaluate()` will not only focusing the metrics of loss, which will be default focusing while traning and testing, but also be focusing in metrics we specified in `compile()`**"
+    "Please note that the compile need specify the metrics we want to use to evaluate the performance during traing, aslo this parameter will be feed to `evaluate()` as the metrics we focusing in model testing, and the **`evaluate()` will not only focusing the metrics of loss, which will be default focusing while traning and testing, but also be focusing in metrics we specified in `compile()`**"
    ]
   },
   {
