Modidy keras.learn(2) and change basic knowledge name

--- a/Tensor_Flow_Basic_Knowledage.ipynb
+++ b/Tensor_Flow_Basic_Knowledage.ipynb
@@ -1134,7 +1134,7 @@
    "source": [
     "mymodel.compile(\n",
     "    # Define loss function\n",
-    "    loss=tf.keras.losses.categorical_generalized_cross_entropy,\n",
+    "    loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=False),\n",
     "    \n",
     "    # Define optimize function\n",
     "    optimizer=tf.keras.optimizers.Adam(learning_rate=0.001),\n",
@@ -1143,7 +1143,7 @@
     "    run_eagerly=False,\n",
     "\n",
     "    # Add the matrics we want concern, notice the loss is default output, don't add it in the metircs\n",
-    "    metrics=[tf.keras.metrics.Accuracy()]\n",
+    "    metrics=[tf.keras.metrics.SparseCategoricalAccuracy()]\n",
     ")"
    ]
   },
@@ -1217,7 +1217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mymodel.fit(\n",
+    "histories = mymodel.fit(\n",
     "    x=x_train,\n",
     "    \n",
     "    y=y_train,\n",
@@ -1229,6 +1229,24 @@
     "    # The callbacks should be stored in a list and transfer to callbacks parameter in fit() method\n",
     "    callbacks=[early_stop]\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8a2e86c-f3e3-4f63-bb24-7f13b98ad72d",
+   "metadata": {},
+   "source": [
+    "#### After training, the method `fit()` will reture an object \"history\", it has an instance `history`, which is a dictionary, cover everything inside the training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99fa970d-f812-470b-9003-9d83f4aaa9eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hitories.history[\"val_accuracy\"]"
    ]
   }
  ],
